welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:35: error: value Orange is not a member of object java.awt.Color
	fleur(Color.Orange);
                    ^